fixed a broken link in my main header

--- a/home-page.html
+++ b/home-page.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="menu-list">
                         <ul class="menu-list-list">
-                            <li><a href="">About</a></li>
+                            <li><a href="index.html">About</a></li>
                             <li><a href="">Program</a></li>
                             <li><a href="">Join</a></li>
                             <li><a href="">Sponsor</a></li>
