implementing the javascript

--- a/home-page.html
+++ b/home-page.html
@@ -60,7 +60,7 @@
                         <ul class="menu-list-list">
                             <li><a href="index.html">About</a></li>
                             <li><a href="">Program</a></li>
-                            <li><a href="">Join</a></li>
+                            <li><a class="page-link" href="home-page.html">Home</a></li>
                             <li><a href="">Sponsor</a></li>
                             <li><a href="">News</a></li>
                             <li><a href="">CC Campaign</a></li>
@@ -125,7 +125,7 @@
         <h2>CONTRIBUTORS</h2>
         <i class="fa-solid fa-minus"></i>
         <div class="contributors-grid">
-            <div class="contributor-1 contributor-info left">
+            <!-- <div class="contributor-1 contributor-info left">
                 <div class="c-image"><img class="people-image" src="images\portrait-outgoing-good-looking-african-american-guy-with-bristle-blue-turtleneck (1).jpg" alt=""></div>
                 <div class="info">
                 <h2>HOREB MAXIMUS</h2>
@@ -178,7 +178,7 @@
                 <i class="fa-solid fa-minus"></i>
                 <p class="contributions">contributed financially to the growth of the organisation</p>
                 </div>
-            </div>           
+            </div>            -->
         </div>
         <button class="more-button">MORE<i class="fa-solid fa-chevron-down"></i></button>
     </section>
