--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <ul class="menu-list-list">
                     <li><a href="index.html">About</a></li>
                     <li><a href="">Program</a></li>
-                    <li><a href="">Join</a></li>
+                    <li><a class="page-link" href="home-page.html">Home</a></li>
                     <li><a href="">Sponsor</a></li>
                     <li><a href="">News</a></li>
                     <li><a href="">CC Campaign</a></li>
