--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </section>
 <section class="page-2">
     <div class="part-one-page-2">
-        <h3>Creative Commonns<br>Global Summit 2015 Logo</h3>
+        <h3>Creative Commonns Global Summit 2015 Logo</h3>
         <i class="fa-solid fa-minus"></i>
         <p>The logo of Global Summit 2015 was decided <br> through the logo competition from 8 June to 7 July</p>
     </div>
