--- a/home-page.html
+++ b/home-page.html
@@ -70,9 +70,9 @@
             </header>
     <section class="landing-page-home">
         <h3>"Hello! Sharing World"</h3>
-        <h1>CREATIVE COMMONS <br> GLOBAL SUMMIT 2015</h1>
+        <h1>CREATIVE COMMONS <br> GLOBAL SUMMIT<br> 2015</h1>
     <div class="page-1-info">
-        <p>The Global Summit brings together the community of experts, academics and activists who compromise the Creative Commons affiliate network in a different country every two. This year, we hope to expand our invitation list including organizations and individuals</p>
+        <p>The Global Summit brings together the community of experts, academics and activists who compromise the Creative Commons affiliate network in a different country every two. This year, we hope to expand our invitation list including<br>organizations and individuals</p>
         <p>2015.10.15(THU)~16(FRI)
         </p>
         <p>@ST Emery's church of Africa and more</p>
@@ -115,14 +115,14 @@
             </div>
         </div>
         <div class="big-orange-button">
-            <a href="">Join Today!!!</a>
+            <a href="">JoinCCGLOBALSUMMIT2015</a>
         </div>
         <div class="white-link">
            <u> SEE THE WHOLE PROGRAM</u>
         </div>
     </section>
     <section class="contributors">
-        <h2>CONTRIBUTORS</h2>
+        <h2>FEATURED SPEAKERS</h2>
         <i class="fa-solid fa-minus"></i>
         <div class="contributors-grid">
         </div>
