--- a/home-page.html
+++ b/home-page.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="white-part">
                     <div class="cc-image">
-                        <i class="fa-solid fa-closed-captioning"></i>
+                        <a href="home-page.html"><i class="fa-solid fa-closed-captioning"></i></a>
                     </div>
                     <div class="text">
                         <p>
