--- a/home-page.html
+++ b/home-page.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="pop-up-menu.css">
 </head>
 <body id="home-page">
+ <div class="general-grid">
     <section class="background-image-wrapper">
         <div class="over-lay">
             <header class="about-mobile-head"><i class="fa-sharp fa-solid fa-bars"></i>
@@ -72,7 +73,7 @@
         <h3>"Hello! Sharing World"</h3>
         <h1>CREATIVE COMMONS <br> GLOBAL SUMMIT<br> 2015</h1>
     <div class="page-1-info">
-        <p>The Global Summit brings together the community of experts, academics and activists who compromise the Creative Commons affiliate network in a different country every two. This year, we hope to expand our invitation list including<br>organizations and individuals</p>
+        <p>The Global Summit brings together the community of experts, academics and activists who compromise the Creative Commons affiliate network in a different  country every two. This year, we hope to expand our invitation list including organizations and individuals</p>
         <p>2015.10.15(THU)~16(FRI)
         </p>
         <p>@ST Emery's church of Africa and more</p>
@@ -115,7 +116,7 @@
             </div>
         </div>
         <div class="big-orange-button">
-            <a href="">JoinCCGLOBALSUMMIT2015</a>
+            <a href="">Join CC GLOBAL-SUMMIT 2015</a>
         </div>
         <div class="white-link">
            <u> SEE THE WHOLE PROGRAM</u>
@@ -170,5 +171,6 @@
             </small>
         </div>
     </section>
+ </div>
 </body>
 </html>
