made necessary changes to design and structure

--- a/home-page.html
+++ b/home-page.html
@@ -64,7 +64,7 @@
                             <li><a class="page-link" href="home-page.html">Home</a></li>
                             <li><a href="">Sponsor</a></li>
                             <li><a href="">News</a></li>
-                            <li><a href="">CC Campaign</a></li>
+                            <li><a href="">Campaign</a></li>
                         </ul>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
     </section>
     <section class="programs">
         <h3>Main Program</h3>
-        <i class="fa-solid fa-minus"></i>
+       <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
         <div class="program-grid">
             <div class="cell-1 cell">
                 <i class="fa-solid fa-microphone"></i>
@@ -124,7 +124,7 @@
     </section>
     <section class="contributors">
         <h2>FEATURED SPEAKERS</h2>
-        <i class="fa-solid fa-minus"></i>
+        <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
         <div class="contributors-grid">
         </div>
         <button class="more-button">MORE<i class="fa-solid fa-chevron-down"></i></button>
@@ -135,7 +135,7 @@
             <h3>
                 Partners
             </h3>
-            <i class="fa-solid fa-minus"></i>
+            <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
         </div>
         <div class="partners-2">
             <i class="fa-brands fa-google"></i>
@@ -147,12 +147,11 @@
             <i class="fa-brands fa-facebook"></i>
 
 
-            <span class="row-two">
-                <i class="fa-brands fa-paypal"></i>
+            <i class="fa-brands fa-paypal"></i>
 
 
-                <i class="fa-brands fa-dropbox"></i>
-            </span>
+            <i class="fa-brands fa-dropbox"></i>
+            
         </div>
     </section>
     <section class="credits">
