--- a/home-page.html
+++ b/home-page.html
@@ -127,7 +127,7 @@
         <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
         <div class="contributors-grid">
         </div>
-        <button class="more-button">MORE<i class="fa-solid fa-chevron-down"></i></button>
+        <button type="button" class="more-button">MORE<i class="fa-solid fa-chevron-down"></i></button>
     </section>
     <section class="white-space"></section>
     <section class="partners">
