final adjustments : image in javascript grid

--- a/home-page.html
+++ b/home-page.html
@@ -83,7 +83,7 @@
     </section>
     <section class="programs">
         <h3>Main Program</h3>
-       <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
+       <div class="minus-container"></div>
         <div class="program-grid">
             <div class="cell-1 cell">
                 <i class="fa-solid fa-microphone"></i>
@@ -124,7 +124,7 @@
     </section>
     <section class="contributors">
         <h2>FEATURED SPEAKERS</h2>
-        <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
+        <div class="minus-container"></div>
         <div class="contributors-grid">
         </div>
         <button type="button" class="more-button">MORE<i class="fa-solid fa-chevron-down"></i></button>
@@ -135,7 +135,7 @@
             <h3>
                 Partners
             </h3>
-            <div class="minus-conatiner"> <i class="fa-solid fa-minus"></i></div>
+            <div class="minus-container"></div>
         </div>
         <div class="partners-2">
             <i class="fa-brands fa-google"></i>
