--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <section class="page-2">
     <div class="part-one-page-2">
         <h3>Creative Commons<br>Global Summit 2015 Logo</h3>
-        <div class="minus-conatiner"><i class="fa-solid fa-minus"></i></div>
+        <div class="minus-container"></div>
         <p>The logo of Global Summit 2015 was decided <br> through the logo competition from 8 June to 7 July  academics and activists who compromise the Creative Commons affiliate network in a different country every two. This year, we hope to expand our invitation list including organizations and individuals</p>
     </div>
     <div class="part-2-grid">
@@ -104,7 +104,7 @@
     <h2>
         See the past CC Global Summits
     </h2>
-    <div class="minus-conatiner"><i class="fa-solid fa-minus"></i></div>
+    <div class="minus-container"></div>
     <p>
         Take a look at the last two CC GLobal Summits which took place in Buenos Aires and in Warsaw.
     </p>
@@ -131,7 +131,7 @@
             <h3>
                 Partner
             </h3>
-            <div class="minus-conatiner"><i class="fa-solid fa-minus"></i></div>
+            <div class="minus-container"></div>
         </div>
         <div class="partners-2">
             <i class="fa-brands fa-google"></i>
