making requested changes

--- a/home-page.html
+++ b/home-page.html
@@ -33,7 +33,7 @@
                 </div>
                 </div></header>
             <header class="about-desk-head">
-                <div class="sign-in-bar">
+                <nav class="sign-in-bar">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <ul>
@@ -41,7 +41,7 @@
                         <li><a href="">Mypage</a></li>
                         <li><a href="">Extras</a></li>
                     </ul>
-                </div>
+                </nav>
                 <div class="white-part">
                     <div class="cc-image">
                         <a href="home-page.html"><i class="fa-solid fa-closed-captioning"></i></a>
@@ -115,9 +115,9 @@
                 <p>ensuring the next generation inherits the values taught by the program to make society a little bit better</p>
             </div>
         </div>
-        <div class="big-orange-button">
-            <a href="">Join CC GLOBAL-SUMMIT 2015</a>
-        </div>
+        <button class="big-orange-button">
+            Join CC GLOBAL-SUMMIT 2015
+        </button>
         <div class="white-link">
            <u> SEE THE WHOLE PROGRAM</u>
         </div>
